fix: selected-patient-tabs scroll and overflow

--- a/css/call.css
+++ b/css/call.css
@@ -153,8 +153,12 @@
 /* selected patient info */
 .selected-patient-info {
   height: 200px;
+  min-height: 200px;
+  flex-shrink: 0;
   box-shadow: 0px -3px 6px -3px rgba(0, 0, 0, 0.2);
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .selected-patient-tabs {
@@ -178,16 +182,25 @@
 }
 
 .patient-tabs-container {
+  flex: 1;
+  overflow: hidden;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 /* request-container */
 
 .requests-list {
-  padding: 6px;
+  padding: 4px 6px 4px 4px;
   display: flex;
   gap: 6px;
   flex-direction: column;
   font-size: 10px;
+
+  overflow-y: auto;
+  flex: 1;
+  min-height: 0;
 }
 
 .request-container {
@@ -209,18 +222,15 @@
   font-weight: 700;
 }
 
-.hidden {
-  display: none;
-}
-
 /* visit */
 .visit-list {
   overflow-y: auto;
-
   padding: 4px 6px 0;
   display: flex;
   flex-direction: column;
   gap: 4px;
+  flex: 1;
+  min-height: 0;
 }
 
 .visit {
@@ -254,6 +264,7 @@
 
 .visit-name-container {
   font-size: 12px;
+  white-space: nowrap;
 }
 
 .visit-footer {
@@ -276,4 +287,8 @@
 .visit-price {
   font-weight: 700;
   font-size: 12px;
+}
+
+.hidden {
+  display: none;
 }
